<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="180dp"
    android:layout_height="wrap_content"
    android:layout_marginLeft="@dimen/margin_medium">

    <TextView
        android:id="@+id/tv_shop_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_medium_2"
        android:layout_marginTop="@dimen/margin_medium_3"
        android:text="@string/newly_open"
        android:textColor="@color/primary"
        android:textSize="@dimen/text_regular_3x"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_shop_1"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/tv_shop_type"
        android:layout_below="@id/tv_shop_type"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/dummy_img_4" />

    <TextView
        android:id="@+id/tv_shop_name_1"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignTop="@id/iv_shop_1"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_toRightOf="@id/iv_shop_1"
        android:gravity="center_vertical"
        android:text="@string/shop_name_1"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_shop_2"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/tv_shop_type"
        android:layout_below="@id/iv_shop_1"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/dummy_img_4" />

    <TextView
        android:id="@+id/tv_shop_name_2"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignTop="@id/iv_shop_2"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_toRightOf="@id/iv_shop_2"
        android:gravity="center_vertical"
        android:text="@string/shop_name_2"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_shop_3"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignLeft="@id/tv_shop_type"
        android:layout_below="@id/iv_shop_2"
        android:layout_marginTop="@dimen/margin_medium_2"
        android:src="@drawable/dummy_img_4" />

    <TextView
        android:id="@+id/tv_shop_name_3"
        android:layout_width="wrap_content"
        android:layout_height="50dp"
        android:layout_alignTop="@id/iv_shop_3"
        android:layout_marginBottom="@dimen/margin_medium_2"
        android:layout_marginLeft="@dimen/margin_medium"
        android:layout_toRightOf="@id/iv_shop_3"
        android:gravity="center_vertical"
        android:text="@string/shop_name_3"
        android:textColor="@color/primary_text"
        android:textSize="@dimen/text_regular_2x"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_divider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_shop_name_3"
        android:src="@drawable/divider_margin_horizontal_line" />

    <TextView
        android:id="@+id/lbl_explore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/tv_shop_type"
        android:layout_below="@id/iv_divider"
        android:layout_marginBottom="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/explore" />

</RelativeLayout>